<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollActivity">

    <TextView
        android:id="@+id/value_text"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/value_text"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/value_num"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/value_num"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/see_dice_result_button"
        android:text="@string/see_dice_result_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/value_num"
        app:layout_constraintBottom_toTopOf="@+id/see_roll_result_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="131dp" android:layout_marginStart="131dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"/>

    <Button
        android:id="@+id/see_roll_result_button"
        android:text="@string/see_roll_result_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/see_dice_result_button"
        app:layout_constraintBottom_toTopOf="@+id/reroll_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="131dp" android:layout_marginStart="131dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"/>

    <Button
        android:id="@+id/reroll_button"
        android:text="@string/reroll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/see_roll_result_button"
        app:layout_constraintBottom_toTopOf="@+id/home_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

    <Button
        android:id="@+id/home_button"
        android:text="@string/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/reroll_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

</LinearLayout>