<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/game_name"
    android:id="@+id/game_name"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/num_dice_input"
    android:layout_marginTop="100dp"
    android:textSize="42dp" android:layout_marginBottom="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num_dice"
        android:ems="10"
        android:id="@+id/num_dice_input"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/game_name"
        app:layout_constraintBottom_toTopOf="@+id/max_dice_input"
        android:inputType="number"
        android:digits="0123456789"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dice_value"
        android:ems="10"
        android:id="@+id/max_dice_input"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/num_dice_input"
        app:layout_constraintBottom_toTopOf="@+id/roll_button"
        android:inputType="number"
        android:digits="0123456789"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/roll_button"
        android:text="@string/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/max_dice_input"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

    <Button
        android:id="@+id/clear_button"
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/roll_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>