<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dice_id"
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:id="@+id/head_id" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_sum"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/head_sum" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_each"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:id="@+id/head_each" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_highest"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/head_highest" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_lowest"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/head_lowest" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_average"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:id="@+id/head_average" android:textSize="28sp"
                android:gravity = "center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dice_id"
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:id="@+id/dice_id" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_sum"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/dice_sum" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_each"
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:id="@+id/dice_each" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_highest"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/dice_highest" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_lowest"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content"
                android:id="@+id/dice_lowest" android:textSize="28sp"
                android:gravity = "center"/>
            <TextView
                android:text="@string/dice_average"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:id="@+id/dice_average" android:textSize="28sp"
                android:gravity = "center"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>